# Credit-Card-Processor

./: .dockerignore  .gitignore  CHECK_POSTGRES_LOGS.md  CHROME_DEVTOOLS_TESTING.md  CHROME_DEVTOOLS_TEST_REPORT.md  CLAUDE.md  DEPLOYMENT.md  DOCKER-DIAGNOSTICS.md  DOCKER_BUILD_FIX.md  E2E_TEST_REPORT.md  FRONTEND_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  PROJECT_ARCHITECTURE.md  README.md  START_CONTAINERS_FIRST.md  TEST_VALIDATION_GUIDE.md  VALIDATION_REPORT.md  VALIDATION_REPORT_FINAL.md  debug_extraction.py  deploy-all.ps1  deploy-frontend.ps1  deploy.sh  eslint.config.mjs  expected_results_detail  expected_results_summary  next.config.ts  package-lock.json  package.json  test-upload.html  test_matching.py  test_upload.py
backend/: .dockerignore  Dockerfile  TESTING_README.md  alembic.ini  analyze_pdf_format.py  init.sql  pdf_analysis_output.txt  pyproject.toml  pytest.ini  requirements.txt  run_all_tests.sh  run_contract_tests.sh  test_debug_feature.py  test_pattern.py  test_pdf_extraction.py  test_progress_simulation.py  test_wex_extraction.py
backend/docs/api/: progress_endpoints.md
backend/migrations/: README  env.py  manual_progress_tracking.sql
backend/migrations/versions/: 20251013_1622_add_extracting_matching_status.py  20251014_0516_make_employee_id_nullable.py  34631fc059d2_merge_migration_heads.py  34992237d751_add_progress_tracking.py  34a1f65dd845_add_employee_aliases_and_transaction_.py  (+2 more)
backend/src/: __init__.py  celery_app.py  config.py  database.py  main.py  tasks.py
backend/tests/: conftest.py
(+332 files in other folders)
