[project]
name = "credit-card-reconciliation"
version = "1.0.0"
description = "Credit card reconciliation system backend API"
authors = [{name = "ii-us", email = "info@ii-us.com"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "python-jose>=3.3.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "openpyxl>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"
markers = [
    "contract: Contract tests for API endpoints",
    "integration: Integration tests for end-to-end scenarios",
    "unit: Unit tests for individual components",
]
log_cli = true
log_cli_level = "INFO"
